--- a/scrapgoat/requirements.txt
+++ b/scrapgoat/requirements.txt
@@ -1,29 +1,56 @@
 asgiref==3.5.2
+attrs==22.1.0
+awsebcli==3.20.3
 backports.zoneinfo==0.2.1
+bcrypt==3.2.2
+blessed==1.19.1
+botocore==1.23.54
+cached-property==1.5.2
+cement==2.8.2
 certifi==2022.6.15
 cffi==1.15.1
-charset-normalizer==2.1.0
+charset-normalizer==2.0.12
+colorama==0.4.3
 cryptography==37.0.4
 defusedxml==0.7.1
 Django==4.1
 django-cleanup==6.0.0
 django-crispy-forms==1.14.0
 django-environ==0.9.0
+docker==4.4.4
+docker-compose==1.25.5
+dockerpty==0.4.1
+docopt==0.6.2
 ecdsa==0.18.0
+future==0.16.0
 idna==3.3
+jmespath==0.10.0
+jsonschema==3.2.0
 oauthlib==3.2.0
+paramiko==2.11.0
+pathspec==0.9.0
 Pillow==9.2.0
 pyasn1==0.4.8
 pycparser==2.21
 PyJWT==2.4.0
+PyNaCl==1.5.0
+pyrsistent==0.18.1
+pysqlite3-binary==0.4.7.post7
+python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-jose==3.3.0
 python3-openid==3.2.0
-requests==2.28.1
+PyYAML==5.4.1
+requests==2.26.0
 requests-oauthlib==1.3.1
 rsa==4.9
-six==1.16.0
+semantic-version==2.8.5
+six==1.14.0
 social-auth-app-django==5.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
+termcolor==1.1.0
+texttable==1.6.4
 urllib3==1.26.11
+wcwidth==0.1.9
+websocket-client==0.59.0
